--- a/xinteriointerior.html
+++ b/xinteriointerior.html
@@ -21,7 +21,7 @@
         rel="stylesheet">
 
     <title>Xinterio</title>
-
+    <link rel="icon" type="image/x-icon" href="./interior/favicon.png">
 
 
     <link rel="stylesheet" href="./xinteriointerior.css">
